# synthetic_data_fine_tuning

./: .gitignore  README.md  app.py  chunking_experiments.ipynb  example.html  experiments.ipynb  llm_manager.py  object_resource.py  openai_validation_script.ipynb  prompts.py  pyproject.toml  substack_scraper.py  synthetic_data_generator.py  training_data_formatter.py  urls.json
data/: conversation_dataset.csv  final_finetuning_data.jsonl  finetuning_data_unicode_fix.jsonl  seed_examples.json  training_dataset.csv
openai_scripts/: check_job_status.py  check_uploaded_files.py  start_finetuning_job.py  upload_training_data.py
templates/: index.html
